added sort-function for management-tables

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
         src="{% static 'js/bootstrap.min.js' %}"
     ></script>
     <script
+        data-search-pseudo-elements
         type="text/javascript"
         src="{% static 'js/fontawesome.min.js' %}"
     ></script>
