--- a/templates/core/management/list_model.html
+++ b/templates/core/management/list_model.html
@@ -107,9 +107,9 @@
     <h2 class="card-header">
         {{ verbose_name_plural }} anzeigen
 
-        <div class="btn-toolbar float-right">
+        <div class="btn-toolbar float-lg-right spacer-t-md text-center">
             {% if can_create %}
-            <div class="btn-group my-auto ml-3">
+            <div class="btn-group my-auto">
                 <a
                     href="{{ create_url }}"
                     class="btn btn-primary btn-block"
