--- a/templates/core/sale/balance.html
+++ b/templates/core/sale/balance.html
@@ -5,7 +5,7 @@
         <form method="post">
             {% csrf_token %}
 
-            <div class="input-group mb-3">
+            <div class="input-group">
                 {{ form.balance }}
                 <div class="input-group-append">
                     <span class="input-group-text">€</span>
@@ -14,7 +14,7 @@
             <button
                 type="submit"
                 name="count"
-                class="btn btn-primary btn-block"
+                class="btn btn-primary btn-block mt-3"
             >
                 Bestätigen
             </button>
@@ -22,7 +22,7 @@
     </div>
     {% else %}
     <div class="card-body">
-        <div class="input-group mb-3">
+        <div class="input-group">
             <input
                 type="number"
                 value="{{ balance }}"
