--- a/templates/core/management/update_model.html
+++ b/templates/core/management/update_model.html
@@ -135,11 +135,7 @@
                 {% endif %}
 
                 {% for fieldset in fieldsets %}
-                <formset
-                    class="list-group-item"
-                    {% if not fieldset.legend %}style="margin-top: 1rem;"
-                    {% endif %}
-                >
+                <formset class="list-group-item{% if not fieldset.legend %} pt-md-3{% endif %}">
                     {% if fieldset.legend %}
                     <legend>{{ fieldset.legend }}</legend>
                     {% endif %}
@@ -156,7 +152,7 @@
 
                 <formset class="list-group-item">
                     <div class="row">
-                        <div class="col-2">
+                        <div class="col-3 col-sm-2">
                             <a
                                 href="{{ abort_url }}"
                                 class="btn btn-primary btn-block"
@@ -165,8 +161,7 @@
                                 <i class="fas fa-chevron-left"></i>
                             </a>
                         </div>
-                        <div class="col-1"></div>
-                        <div class="col-6">
+                        <div class="col-6 offset-sm-1">
                             <button
                                 class="btn btn-success btn-block"
                                 type="submit"
@@ -175,8 +170,7 @@
                             </button>
                         </div>
                         {% if delete_url %}
-                        <div class="col-1"></div>
-                        <div class="col-2">
+                        <div class="col-3 col-sm-2 offset-sm-1">
                             <a
                                 href="{{ delete_url }}"
                                 class="btn btn-danger btn-block"
